--- a/MathObjects.Framework.Parser.Tests/MathObjects.Framework.Parser.Tests.csproj
+++ b/MathObjects.Framework.Parser.Tests/MathObjects.Framework.Parser.Tests.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</ProjectGuid>
+    <ProjectGuid>{8B1C6103-C638-4521-B0D3-BF9F641227D4}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>MathObjects.Framework</RootNamespace>
-    <AssemblyName>MathObjects.Framework</AssemblyName>
+    <RootNamespace>MathObjects.Framework.Parser.Tests</RootNamespace>
+    <AssemblyName>MathObjects.Framework.Parser.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -29,25 +29,30 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IMathObject.cs" />
-    <Compile Include="IMathObjectFactory.cs" />
-    <Compile Include="IMathOperation.cs" />
-    <Compile Include="IHasDisplayValue.cs" />
-    <Compile Include="IHasOutput.cs" />
-    <Compile Include="IHasName.cs" />
-    <Compile Include="ErrorHandler.cs" />
-    <Compile Include="IMathBinaryOperation.cs" />
-    <Compile Include="IMathBinaryOperationFactory.cs" />
-    <Compile Include="IMathOperationFactory.cs" />
-    <Compile Include="IMathObjectFactoryContext.cs" />
-    <Compile Include="ArrayObject.cs" />
-    <Compile Include="FactoryContext.cs" />
-    <Compile Include="IMathFunction.cs" />
-    <Compile Include="IMathFunctionContext.cs" />
-    <Compile Include="IMathObjectEx.cs" />
+    <Compile Include="Test.cs" />
+    <Compile Include="MathObjectStackTest.cs" />
+    <Compile Include="TestObject.cs" />
+    <Compile Include="TestBinaryOperation.cs" />
+    <Compile Include="TestObjectEx.cs" />
+    <Compile Include="TestUniraryOperation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
+      <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
+      <Name>MathObjects.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Framework.Parser\MathObjects.Framework.Parser.csproj">
+      <Project>{5A8DC1C0-6298-49DD-9B02-36EBB0F6C70D}</Project>
+      <Name>MathObjects.Framework.Parser</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
