--- a/MathObjects.Plugin.Integers/MathObjects.Plugin.Integers.csproj
+++ b/MathObjects.Plugin.Integers/MathObjects.Plugin.Integers.csproj
@@ -69,6 +69,8 @@
     <Compile Include="Func\TopOperation.cs" />
     <Compile Include="Func\GcdFunction.cs" />
     <Compile Include="Func\GcdOperation.cs" />
+    <Compile Include="Func\FactorsFunction.cs" />
+    <Compile Include="Func\FactorsOperation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
