--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -85,6 +85,7 @@
     <Compile Include="MathFunc\RadiansFunction.cs" />
     <Compile Include="MathFunc\RadiansOperation.cs" />
     <Compile Include="MathObjectWithName.cs" />
+    <Compile Include="ICanSetName.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -100,13 +101,13 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MathObjects.Plugin.Symmetric\MathObjects.Plugin.Symmetric.csproj">
-      <Project>{1CE2F135-C483-44EF-B9B4-97C737B47CE9}</Project>
-      <Name>MathObjects.Plugin.Symmetric</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Framework.Parser\MathObjects.Framework.Parser.csproj">
       <Project>{5A8DC1C0-6298-49DD-9B02-36EBB0F6C70D}</Project>
       <Name>MathObjects.Framework.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
