--- a/MathObjects.UI/MathObjects.UI.csproj
+++ b/MathObjects.UI/MathObjects.UI.csproj
@@ -76,6 +76,7 @@
     <Compile Include="PluginEx.cs" />
     <Compile Include="EnterWidget.cs" />
     <Compile Include="gtk-gui\MathObjects.UI.EnterWidget.cs" />
+    <Compile Include="StandardButtonDescription.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
