--- a/MathObjects.UI.Widgets/MathObjects.UI.Widgets.csproj
+++ b/MathObjects.UI.Widgets/MathObjects.UI.Widgets.csproj
@@ -97,6 +97,14 @@
       <Project>{D9410118-5AF2-4027-907D-8845F2D2F6C4}</Project>
       <Name>MathObjects.UI.Stack</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.UI.Mediator\MathObjects.UI.Mediator.csproj">
+      <Project>{DBF1DFB8-00DA-4DA3-AC10-B2ED595BD298}</Project>
+      <Name>MathObjects.UI.Mediator</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Parser\" />
