--- a/MathObjects.Framework.Parser.Visitors/MathObjects.Framework.Parser.Visitors.csproj
+++ b/MathObjects.Framework.Parser.Visitors/MathObjects.Framework.Parser.Visitors.csproj
@@ -50,5 +50,13 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
