--- a/MathObjects.Framework.Tests/MathObjects.Framework.Tests.csproj
+++ b/MathObjects.Framework.Tests/MathObjects.Framework.Tests.csproj
@@ -43,6 +43,10 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FactoryRegistryTest.cs" />
