--- a/MathObjects.Plugin.Integers.Tests/MathObjects.Plugin.Integers.Tests.csproj
+++ b/MathObjects.Plugin.Integers.Tests/MathObjects.Plugin.Integers.Tests.csproj
@@ -29,16 +29,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.6.3.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
+      <Package>nunit</Package>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
-      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
-      <Name>MathObjects.Core.Plugin</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
       <Name>MathObjects.Framework</Name>
@@ -54,6 +50,14 @@
     <ProjectReference Include="..\MathObjects.Framework.Parser\MathObjects.Framework.Parser.csproj">
       <Project>{5A8DC1C0-6298-49DD-9B02-36EBB0F6C70D}</Project>
       <Name>MathObjects.Framework.Parser</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
+      <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
+      <Name>MathObjects.Core.Plugin</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
