--- a/MathObjects.Plugin.Rational.Tests/MathObjects.Plugin.Rational.Tests.csproj
+++ b/MathObjects.Plugin.Rational.Tests/MathObjects.Plugin.Rational.Tests.csproj
@@ -30,16 +30,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Core.Plugin\MathObjects.Core.Plugin.csproj">
       <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
@@ -65,5 +62,8 @@
       <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
       <Name>MathObjects.Core.DecoratableObject</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
