--- a/MathObjects.Framework.Parser.Tests/MathObjects.Framework.Parser.Tests.csproj
+++ b/MathObjects.Framework.Parser.Tests/MathObjects.Framework.Parser.Tests.csproj
@@ -30,7 +30,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.3.0.1\lib\net45\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -42,9 +42,6 @@
     <Compile Include="TestUniraryOperation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Framework\MathObjects.Framework.csproj">
       <Project>{C46253F0-D62A-4FFA-9384-1F8BBDE4EB24}</Project>
@@ -58,5 +55,8 @@
       <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
       <Name>MathObjects.Core.DecoratableObject</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
