--- a/MathObjects.Plugin.Integers.Tests/MathObjects.Plugin.Integers.Tests.csproj
+++ b/MathObjects.Plugin.Integers.Tests/MathObjects.Plugin.Integers.Tests.csproj
@@ -29,6 +29,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
