--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -84,6 +84,7 @@
     <Compile Include="MathFunc\DegreesOperation.cs" />
     <Compile Include="MathFunc\RadiansFunction.cs" />
     <Compile Include="MathFunc\RadiansOperation.cs" />
+    <Compile Include="Ref.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
