--- a/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
+++ b/MathObjects.Framework.Registry/MathObjects.Framework.Registry.csproj
@@ -47,5 +47,9 @@
       <Project>{DE8FC63B-1B2B-4A04-9A88-3AA3CD1EB456}</Project>
       <Name>MathObjects.Core.Plugin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Extension\MathObjects.Core.Extension.csproj">
+      <Project>{62D67415-88CB-493D-8044-1AEBB8296681}</Project>
+      <Name>MathObjects.Core.Extension</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
