--- a/MathObjects.UI.Stack/MathObjects.UI.Stack.csproj
+++ b/MathObjects.UI.Stack/MathObjects.UI.Stack.csproj
@@ -96,5 +96,9 @@
       <Project>{F0D702FD-2C0C-4F45-82CE-B52B87F8737D}</Project>
       <Name>MathObjects.Framework.Registry</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.Extension\MathObjects.Core.Extension.csproj">
+      <Project>{62D67415-88CB-493D-8044-1AEBB8296681}</Project>
+      <Name>MathObjects.Core.Extension</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
