--- a/MathObjects.Framework/MathObjects.Framework.csproj
+++ b/MathObjects.Framework/MathObjects.Framework.csproj
@@ -50,12 +50,17 @@
     <Compile Include="FunctionRegistry.cs" />
     <Compile Include="ICanCopyByValue.cs" />
     <Compile Include="AbstractMathObject.cs" />
+    <Compile Include="AbstractMathOperation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\MathObjects.Core.Extension\MathObjects.Core.Extension.csproj">
       <Project>{62D67415-88CB-493D-8044-1AEBB8296681}</Project>
       <Name>MathObjects.Core.Extension</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
