--- a/MathObjects.Core.DecoratableObject/MathObjects.Core.DecoratableObject.csproj
+++ b/MathObjects.Core.DecoratableObject/MathObjects.Core.DecoratableObject.csproj
@@ -36,6 +36,13 @@
     <Compile Include="DecorationManager.cs" />
     <Compile Include="ClassDecorationAttribute.cs" />
     <Compile Include="IDecorationProxy.cs" />
+    <Compile Include="DecoratableExtension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\MathObjects.Core.Extension\MathObjects.Core.Extension.csproj">
+      <Project>{62D67415-88CB-493D-8044-1AEBB8296681}</Project>
+      <Name>MathObjects.Core.Extension</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
