--- a/MathObjects.Framework.Tests/MathObjects.Framework.Tests.csproj
+++ b/MathObjects.Framework.Tests/MathObjects.Framework.Tests.csproj
@@ -51,6 +51,10 @@
       <Project>{62D67415-88CB-493D-8044-1AEBB8296681}</Project>
       <Name>MathObjects.Core.Extension</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MathObjects.Core.DecoratableObject\MathObjects.Core.DecoratableObject.csproj">
+      <Project>{0179E565-7148-4545-B192-012CCFA83166}</Project>
+      <Name>MathObjects.Core.DecoratableObject</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TestMathObject.cs" />
