--- a/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
+++ b/MathObjects.Framework.Parser/MathObjects.Framework.Parser.csproj
@@ -50,6 +50,7 @@
     <Compile Include="MathScope.cs" />
     <Compile Include="IMathScope.cs" />
     <Compile Include="IHasChildrenEx.cs" />
+    <Compile Include="UndefinedObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
