--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -63,30 +63,30 @@
     <Compile Include="Negative.cs" />
     <Compile Include="ExponentObject.cs" />
     <Compile Include="ExponentOperation.cs" />
-    <Compile Include="Func\TopFunction.cs" />
     <Compile Include="Func\TopObject.cs" />
     <Compile Include="Func\TopOperation.cs" />
-    <Compile Include="Func\ConstantFunction.cs" />
     <Compile Include="Func\ConstantObject.cs" />
     <Compile Include="Func\ConstantOperation.cs" />
-    <Compile Include="MathFunc\MathFunction.cs" />
     <Compile Include="MathFunc\MathOperation.cs" />
     <Compile Include="MathFunc\MathFuncObject.cs" />
-    <Compile Include="MathFunc\AngleFunction.cs" />
     <Compile Include="MathFunc\AngleObject.cs" />
     <Compile Include="MathFunc\AngleOperation.cs" />
     <Compile Include="MathFunc\Convert.cs" />
-    <Compile Include="MathFunc\InverseAngleFunction.cs" />
     <Compile Include="MathFunc\InverseAngleObject.cs" />
     <Compile Include="MathFunc\InverseAngleOperation.cs" />
-    <Compile Include="MathFunc\DegreesFunction.cs" />
     <Compile Include="MathFunc\DegreesOperation.cs" />
-    <Compile Include="MathFunc\RadiansFunction.cs" />
     <Compile Include="MathFunc\RadiansOperation.cs" />
     <Compile Include="Ref.cs" />
     <Compile Include="ValueRef.cs" />
     <Compile Include="HasChildrenEx.cs" />
     <Compile Include="MathValue.cs" />
+    <Compile Include="Func\TopOperationFactory.cs" />
+    <Compile Include="Func\ConstantOperationFactory.cs" />
+    <Compile Include="MathFunc\AngleOperationFactory.cs" />
+    <Compile Include="MathFunc\DegreesOperationFactory.cs" />
+    <Compile Include="MathFunc\InverseAngleOperationFactory.cs" />
+    <Compile Include="MathFunc\MathOperationFactory.cs" />
+    <Compile Include="MathFunc\RadiansOperationFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
