--- a/MathObjects.Plugin.FloatingPoint.Tests/MathObjects.Plugin.FloatingPoint.Tests.csproj
+++ b/MathObjects.Plugin.FloatingPoint.Tests/MathObjects.Plugin.FloatingPoint.Tests.csproj
@@ -71,6 +71,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ParserTest.cs" />
+    <Compile Include="TopTest.cs" />
+    <Compile Include="ConstantTest.cs" />
+    <Compile Include="TrigTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
