--- a/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
+++ b/MathObjects.Plugin.FloatingPoint/MathObjects.Plugin.FloatingPoint.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Parser\OperationFactoryContext.cs" />
     <Compile Include="Func\RandomObject.cs" />
     <Compile Include="Func\RandomOperation.cs" />
+    <Compile Include="ParserException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
